update from DS (1110,1113,1114,1116,1119,1121~1123,1126,1128~1133,1135,1138~1144)
版本: 1144
作者: chihwen
日期: 2013年6月13日 下午 02:56:24
訊息:
將 alert 改為 nn.log 避免直接輸出除錯訊息
issue 6337
----
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/curation.js
異動 : /fakeapi/javascripts/epcurate.js
異動 : /fakeapi/javascripts/episode.js

版本: 1143
作者: chihwen
日期: 2013年6月13日 下午 02:46:11
訊息:
將 index 頁專用的 js 從 channel.js 抽取出來獨立為 index.js
issue 6337
----
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
已加入 : /fakeapi/javascripts/index.js

版本: 1142
作者: chihwen
日期: 2013年6月13日 下午 12:55:14
訊息:
1. 將 9x9 production SVN 版本 4840,4841,4883,4884,4885 轉回 fakeapi 分支。
2. 將 index 及 episode-list 頁中，相關 Get URL 共用腳本，獨立集中放到 get-url.js 中。
3. 修正 production SVN 版本 4794 (controller.js, channel.js) 移除用不到的 code 以便通過 JSLint 檢查。
issue 5927
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/episode.js
已加入 : /fakeapi/javascripts/get-url.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json
異動 : /fakeapi/stylesheets/portal.css

版本: 1140
作者: chihwen
日期: 2013年6月12日 上午 12:07:37
訊息:
1. 同步採用 9x9 給的 unplayable video 邏輯，但詳細無效影音呈現規格待 PM 重新 review。
   信件主旨：Re: Remove format= and orderby= from Youtube data API to avoid hitting cache
   寄件日期：2013/6/6 (星期四) 上午 10:36
   if (y.accessControl.embed === 'denied'
       || y.accessControl.syndicate === 'denied'
       || (y.status && !(y.status.reason && y.status.reason === 'limitedSyndication'))) {
2. 修正 #poi-event-overlay 區塊產生錯誤快取問題。
3. 將 POI 相關腳本及樣式引入都移到最上面。
issue 6423
----
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/javascripts/channel-poi.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/curation.js

版本: 1139
作者: chihwen
日期: 2013年6月11日 下午 09:58:25
訊息:
1. 將 jQuery 升級為 v1.10.1、jQuery UI 升級為 v1.10.3。
2. 調整 config.js 利用 nn.load

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -5,42 +5,41 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/playback.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=1026" />
-<link rel="stylesheet" href="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/epcurate.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/ep-curation.css?v=1026" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1026"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1026"></script>
-<script src="javascripts/jquery.ellipsis.js?v=1026"></script>
-<script src="javascripts/jquery.blockUI.js?v=1026"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=1026"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=1026"></script>
-<script src="javascripts/jquery.uniform.min.js?v=1026"></script>
-<script src="javascripts/jquery.swfobject.min.js?v=1026"></script>
-<script src="javascripts/jquery.titlecard.js?v=1026"></script>
-<script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1026"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1026"></script>
-<script src="javascripts/jquery.cookie.js?v=1026"></script>
-<script src="javascripts/jquery.countdown.min.js?v=1026"></script>
-<script src="javascripts/jquery.autotab.min.js?v=1026"></script>
-<script src="javascripts/jquery.cycle.all.js?v=1026"></script>
-<script src="javascripts/jquery.datepick.js?v=1026"></script>
-<script src="javascripts/perfect-scrollbar.js?v=1026"></script>
-<script src="javascripts/json2.js?v=1026"></script>
-<script src="javascripts/purl.js?v=1026"></script>
-<script src="javascripts/swfupload/swfupload.js?v=1026"></script>
-<script src="javascripts/horizontal-slider.js?v=1026"></script>
-<script src="javascripts/config.js?v=1026"></script>
-<script src="javascripts/controller.js?v=1026"></script>
-<script src="javascripts/basic.js?v=1026"></script>
-<script src="javascripts/curation.js?v=1026"></script>
+<link rel="stylesheet" href="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/style.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/playback.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/ep-curation.css?v=1135" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1135"></script>
+<script src="javascripts/nn-sdk.js?v=1135"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=1135"></script>
+<script src="javascripts/jquery.uniform.min.js?v=1135"></script>
+<script src="javascripts/jquery.swfobject.min.js?v=1135"></script>
+<script src="javascripts/jquery.titlecard.min.js?v=1135"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/jquery.countdown.min.js?v=1135"></script>
+<script src="javascripts/jquery.autotab.min.js?v=1135"></script>
+<script src="javascripts/jquery.cycle.all.min.js?v=1135"></script>
+<script src="javascripts/jquery.datepick.min.js?v=1135"></script>
+<script src="javascripts/perfect-scrollbar.min.js?v=1135"></script>
+<script src="javascripts/json2.min.js?v=1135"></script>
+<script src="javascripts/purl.min.js?v=1135"></script>
+<script src="javascripts/swfupload/swfupload.js?v=1135"></script>
+<script src="javascripts/horizontal-slider.min.js?v=1135"></script>
+<script src="javascripts/config.js?v=1135"></script>
+<script src="javascripts/controller.js?v=1135"></script>
+<script src="javascripts/basic.js?v=1135"></script>
+<script src="javascripts/curation.js?v=1135"></script>
 <title>9x9.tv - Episode Curation - Curation</title>
 </head>
 <body>
@@ -188,8 +187,8 @@
 
 <script id="video-info-tmpl" type="text/x-jquery-tmpl">
 <div id="video-info-wrap">
-<h3 class="ellipsis multiline"><span class="title">${name}</span></h3>
-<p>
+<h3><span class="title">${name}</span></h3>
+<p class="info">
 {{if ytDuration > duration}}
 ${$item.startHMS} - ${$item.endHMS} 
 (${nn._([CMS_CONF.PAGE_ID, 'video-info', 'Original'])} <span class="duration">${formatDuration(ytDuration)}</span>)
@@ -250,8 +249,8 @@ ${nn._([CMS_CONF.PAGE_ID, 'video-info', 'By'])} <a href="http://www.youtube.com/
 
 <script id="poi-info-tmpl" type="text/x-jquery-tmpl">
 <div id="poi-info">
-<h3 class="ellipsis"><span class="title">${name}</span></h3>
-<p class="ellipsis">
+<h3><span class="title">${name}</span></h3>
+<p class="info">
 {{if ytDuration > duration}}
 ${$item.startHMS} - ${$item.endHMS} 
 (${nn._([CMS_CONF.PAGE_ID, 'video-info', 'Original'])} <span class="duration">${formatDuration(ytDuration)}</span>)
