--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=1026" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1026"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1026"></script>
-<script src="javascripts/jquery.ellipsis.js?v=1026"></script>
-<script src="javascripts/jquery.blockUI.js?v=1026"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=1026"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=1026"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1026"></script>
-<script src="javascripts/jquery.cookie.js?v=1026"></script>
-<script src="javascripts/json2.js?v=1026"></script>
-<script src="javascripts/purl.js?v=1026"></script>
-<script src="javascripts/vertical.slider.js?v=1026"></script>
-<script src="javascripts/config.js?v=1026"></script>
-<script src="javascripts/controller.js?v=1026"></script>
-<script src="javascripts/basic.js?v=1026"></script>
-<script src="javascripts/channel.js?v=1026"></script>
+<link rel="stylesheet" href="stylesheets/style.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=1135" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="javascripts/nn-sdk.js?v=1135"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=1135"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/json2.min.js?v=1135"></script>
+<script src="javascripts/purl.min.js?v=1135"></script>
+<script src="javascripts/vertical.slider.min.js?v=1135"></script>
+<script src="javascripts/config.js?v=1135"></script>
+<script src="javascripts/controller.js?v=1135"></script>
+<script src="javascripts/basic.js?v=1135"></script>
+<script src="javascripts/get-url.js?v=1135"></script>
+<script src="javascripts/index.js?v=1135"></script>
 <title>9x9.tv - My Channels</title>
 </head>
 <body>
@@ -50,13 +50,13 @@
 
 <div id="studio-nav">
 <div class="studio-nav-wrap">
-<h3><a href="index.html">CMS</a></h3>
+<h3><a href="index.html"><span class="cms-icon">CMS</span><p class="sub-title">Content Management System</p></a></h3>
 <ul>
 <li class="on"><span><a href="index.html">My Channels</a></span></li>
 <li id="my-portal" class="hide"><span><a href="portal-set.html">My Portal</a></span></li>
 </ul>
 <div class="studio-setup">
-<p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="#"><img src="images/icon_studio_setup.png" alt="" />CMS Setup</a></span></span></p>
+<p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
 <div class="reconnect-notice hide">
 <img src="images/icon_notification.png" alt="" />
 <p class="notice-left"><span class="notice-right"><span class="notice-middle langkey">Connection is inactive, click to restart it.</span></span></p>
@@ -90,37 +90,6 @@
 </div>
 <!--============================== content-wrap close ========================-->
 
-<script id="get-url-part-tmpl" type="text/x-jquery-tmpl">
-<li class="surl-li {{if $item.li_sel === brand}}on{{/if}}" data-meta="${brand}">${brand}</li>
-</script>
-
-<script id="get-url-tmpl" type="text/x-jquery-tmpl">
-    <div class="tip-white-l">
-        <div class="left"></div>
-        <div class="center">
-            <div class="title">${nn._([CMS_CONF.PAGE_ID, 'channel-list', "Brand"])}</div> 
-            <div class="select-gray" id="">
-                <div class="select-content-gray">
-                    <p class="select-btn"></p>
-                    <p class="select-txt-gray">${brand}</p>
-                    <ul class="select-dropdown">{{html $item.li_items}}</ul>
-                </div>
-            </div>
-            <div class="title">${nn._([CMS_CONF.PAGE_ID, 'channel-list', "URL"])}</div> 
-            <div class="input-gray">
-                <p class="left"></p>
-                <p class="center">
-                    <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?brand=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
-                </p>
-                <p class="right"></p>
-            </div>       
-        </div>
-        <div class="right"></div>
-    </div>
-    <div class="tip-bottom"></div>
-</script>
-
-
 <script id="lightbox-create-channel-tmpl" type="text/x-jquery-tmpl">
 <div id="lightbox-create-channel" class="lightbox-content">
 <h3 class="index-collect-title">${nn._(['overlay', 'channel-tutorial', 'Collect and Curate!'])}</h3>
@@ -140,6 +109,36 @@
 <p class="order btns"><span><a href="javascript:void(0);" class="reorder">${nn._([CMS_CONF.PAGE_ID, 'title-func', 'Reorder channels'])}</a></span></p>
 </script>
 
+<script id="get-url-part-tmpl" type="text/x-jquery-tmpl">
+<li class="surl-li{{if $item.li_sel === brand}} on{{/if}}" data-meta="${brand}">${brand}</li>
+</script>
+
+<script id="get-url-tmpl" type="text/x-jquery-tmpl">
+    <div class="tip-white-l">
+        <div class="left"></div>
+        <div class="center">
+            <div class="title">${nn._([CMS_CONF.PAGE_ID, 'channel-list', "Brand"])}</div>
+            <div class="select-gray" id="">
+                <div class="select-content-gray">
+                    <p class="select-btn"></p>
+                    <p class="select-txt-gray">${brand}</p>
+                    <ul class="select-dropdown">{{html $item.li_items}}</ul>
+                </div>
+            </div>
+            <div class="title">${nn._([CMS_CONF.PAGE_ID, 'channel-list', "URL"])}</div>
+            <div class="input-gray">
+                <p class="left"></p>
+                <p class="center">
+                    <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?brand=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                </p>
+                <p class="right"></p>
+            </div>
+        </div>
+        <div class="right"></div>
+    </div>
+    <div class="tip-bottom"></div>
+</script>
+
 <script id="channel-list-tmpl-item" type="text/x-jquery-tmpl">
 <li class="clearfix" data-meta="${id}">
 <div class="container">
@@ -156,7 +155,7 @@
 </div>
 
 <div class="info">
-<h3 data-meta="${name}"><a href="episode-list.html?id=${id}">${name}</a></h3>
+<h3><a href="episode-list.html?id=${id}">${name}</a></h3>
 <p><span>${cntEpisode}</span>${nn._([CMS_CONF.PAGE_ID, 'channel-list', 'Episodes'])}</p>
 <p><span>${cntSubscribe}</span>${nn._([CMS_CONF.PAGE_ID, 'channel-list', 'Followers'])}</p>
 <p><span>${cntView}</span>${nn._([CMS_CONF.PAGE_ID, 'channel-list', 'Views'])}</p>
@@ -167,24 +166,25 @@
         <div class="tip-white-l">
             <div class="left"></div>
             <div class="center">
-                <div class="title">Brand</div> 
+                <div class="title">Brand</div>
                 <div class="select-gray" id="">
                     <div class="select-content-gray">
                         <p id="" class="select-btn"></p>
                         <p id="" class="select-txt-gray">9x9</p>
-                        <ul id="" class="select-dropdown">                            <li class="on" data-meta="9x9.tv">9x9.tv</li>
+                        <ul id="" class="select-dropdown">
+                            <li class="on" data-meta="9x9.tv">9x9.tv</li>
                             <li data-meta="CTS">CTS</li>
                         </ul>
                     </div>
                 </div>
-                <div class="title">URL</div> 
+                <div class="title">URL</div>
                 <div class="input-gray">
                     <p class="left"></p>
-                    <p class="center"> 
+                    <p class="center">
                         <input id="" class="textfield" value="http://www.9x9.tv/view?brand={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
                     </p>
                     <p class="right"></p>
-                </div>       
+                </div>
             </div>
             <div class="right"></div>
         </div>
@@ -280,80 +280,6 @@
 <div class="overlay-btn">
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
 <p class="btns btn-leave"><span><a href="#">Yes</a></span></p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="fb-connect" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap fb-connect">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<p class="fb-connect">
-<span class="content">Connect to</span>
-<img src="images/icon_fb.png" alt="facebook" class="icon" />
-<a href="#" class="switch-on hide">ON</a>
-<a href="#" class="switch-off">OFF</a>
-</p>
-<p class="content">After connecting, you can enable Facebook auto sharing for each channel in Channel settings.</p>
-</div>
-</div>
-</div>
-
-<div id="restart-connect" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap restart-connect">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<div class="reconnect-func">
-<span class="content">Connect to</span>
-<img src="images/icon_fb.png" alt="facebook" class="icon" />
-<p class="btns btn-reconnect"><span class="btn-right"><a href="#">Restart connection</a></span></p>
-</div>
-<p class="content">After connecting, you can enable Facebook auto sharing for each channel in Channel settings.</p>
-<p class="content notice">Auto sharing is disabled because permission to your connected account has been revoked, please click to restart the connection.</p>
-</div>
-</div>
-</div>
-
-<div id="fb-connect-failed" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap connect-fail">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<h5>Can not connect to Facebook correctly!</h5>
-<p class="content">Please try again and make sure you agree on all permissions.</p>
-<div class="overlay-btn">
-<p class="btns btn-failed-ok"><span><a href="#">OK</a></span></p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="disconnect-notice" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap disconnect-notice">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<h5>Account disconnected!</h5>
-<p class="content">{If you want to enable auto sharing again, please:}</p>
-<div class="overlay-btn">
-<p class="btns btn-ok"><span><a href="#">OK</a></span></p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="confirm-disconnect" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap disconnect">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<p class="content">Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?</p>
-<div class="overlay-btn">
-<p class="btns btn-no"><span><a href="#">No</a></span></p>
-<p class="btns btn-disconnect"><span><a href="#">Disconnect</a></span></p>
 </div>
 </div>
 </div>
