--- a/channel-add.html
+++ b/channel-add.html
@@ -5,29 +5,28 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/channel.css?v=1026" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1026"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1026"></script>
-<script src="javascripts/jquery.ellipsis.js?v=1026"></script>
-<script src="javascripts/jquery.blockUI.js?v=1026"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=1026"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=1026"></script>
-<script src="javascripts/jquery.uniform.min.js?v=1026"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1026"></script>
-<script src="javascripts/jquery.cookie.js?v=1026"></script>
-<script src="javascripts/json2.js?v=1026"></script>
-<script src="javascripts/purl.js?v=1026"></script>
-<script src="javascripts/swfupload/swfupload.js?v=1026"></script>
-<script src="javascripts/vertical.slider.js?v=1026"></script>
-<script src="javascripts/config.js?v=1026"></script>
-<script src="javascripts/controller.js?v=1026"></script>
-<script src="javascripts/basic.js?v=1026"></script>
-<script src="javascripts/channel.js?v=1026"></script>
+<link rel="stylesheet" href="stylesheets/style.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/channel.css?v=1135" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="javascripts/nn-sdk.js?v=1135"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/jquery.charcounter.min.js?v=1135"></script>
+<script src="javascripts/jquery.uniform.min.js?v=1135"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/json2.min.js?v=1135"></script>
+<script src="javascripts/purl.min.js?v=1135"></script>
+<script src="javascripts/swfupload/swfupload.js?v=1135"></script>
+<script src="javascripts/vertical.slider.min.js?v=1135"></script>
+<script src="javascripts/config.js?v=1135"></script>
+<script src="javascripts/controller.js?v=1135"></script>
+<script src="javascripts/basic.js?v=1135"></script>
+<script src="javascripts/channel.js?v=1135"></script>
 <title>9x9.tv - Create a new channel</title>
 </head>
 <body>
@@ -52,12 +51,13 @@
 
 <div id="studio-nav">
 <div class="studio-nav-wrap">
-<h3><a href="index.html">CMS</a></h3>
+<h3><a href="index.html"><span class="cms-icon">CMS</span><p class="sub-title">Content Management System</p></a></h3>
 <ul>
 <li class="on"><span><a href="index.html">My Channels</a></span></li>
+<li id="my-portal" class="hide"><span><a href="portal-set.html">My Portal</a></span></li>
 </ul>
 <div class="studio-setup">
-<p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="#"><img src="images/icon_studio_setup.png" alt="" />CMS Setup</a></span></span></p>
+<p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
 <div class="reconnect-notice hide">
 <img src="images/icon_notification.png" alt="" />
 <p class="notice-left"><span class="notice-right"><span class="notice-middle langkey">Connection is inactive, click to restart it.</span></span></p>
@@ -97,7 +97,14 @@
 <div class="fminput clearfix">
 <label>${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Thumbnail'])}</label>
 <div class="fmfield upload-img">
-<p class="img"><img id="thumbnail-imageUrl" src="images/ch_default.png" alt="" width="62" height="62" class="thumbnail" /><img src="images/loading.gif" alt="" class="loading" /></p>
+<div class="thumbnail">
+<div class="img-wrap">
+<div class="img">
+<img id="thumbnail-imageUrl" src="images/ch_default.png" alt="" class="photo" />
+</div>
+</div>
+<img src="images/loading.gif" alt="" class="loading" />
+</div>
 <p id="uploadThumbnail">${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Upload'])}</p>
 <p class="notice img-upload">${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Better results with 300x300 or higher resolution image'])}</p>
 <p class="notice upload-notice hide">${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Please upload jpeg, png, or gif files.'])}</p>
@@ -192,7 +199,7 @@
 </div>
 </div>
 </div>
-<a id="fb-reconnect" href="javascript:void(0);"><img src="images/icon_question.png" alt="" /><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-right"><span class="tip-middle">${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'If fail to auto share to Facebook, please go to CMS Setup to re-connect to Facebook and try again.'])}</span></span></span></a>
+<a id="fb-reconnect" href="javascript:void(0);"><img src="images/icon_question.png" alt="" /><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-right"><span class="tip-middle">${nn._([CMS_CONF.PAGE_ID, 'setting-form', 'If fail to auto share to Facebook, please go to CMS Settings to re-connect to Facebook and try again.'])}</span></span></span></a>
 </div>
 </div>
 <div class="reconnected hide">
@@ -238,7 +245,7 @@
 
 <script id="fb-page-list-tmpl-item" type="text/x-jquery-tmpl">
 {{if name != ""}}
-<li><a href="#" data-id="${id}" data-meta="${name}"><span>${name}</span></a></li>
+<li><a href="#" data-id="${id}"><span>${name}</span></a></li>
 {{else}}
 <li></li>
 {{/if}}
@@ -285,80 +292,6 @@
 <div class="overlay-btn">
 <p class="btns btn-no"><span><a href="#">No</a></span></p>
 <p class="btns btn-leave"><span><a href="#">Yes</a></span></p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="fb-connect" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap fb-connect">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<p class="fb-connect">
-<span class="content">Connect to</span>
-<img src="images/icon_fb.png" alt="facebook" class="icon" />
-<a href="#" class="switch-on hide">ON</a>
-<a href="#" class="switch-off">OFF</a>
-</p>
-<p class="content">After connecting, you can enable Facebook auto sharing for each channel in Channel settings.</p>
-</div>
-</div>
-</div>
-
-<div id="restart-connect" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap restart-connect">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<div class="reconnect-func">
-<span class="content">Connect to</span>
-<img src="images/icon_fb.png" alt="facebook" class="icon" />
-<p class="btns btn-reconnect"><span class="btn-right"><a href="#">Restart connection</a></span></p>
-</div>
-<p class="content">After connecting, you can enable Facebook auto sharing for each channel in Channel settings.</p>
-<p class="content notice">Auto sharing is disabled because permission to your connected account has been revoked, please click to restart the connection.</p>
-</div>
-</div>
-</div>
-
-<div id="fb-connect-failed" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap connect-fail">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<h5>Can not connect to Facebook correctly!</h5>
-<p class="content">Please try again and make sure you agree on all permissions.</p>
-<div class="overlay-btn">
-<p class="btns btn-failed-ok"><span><a href="#">OK</a></span></p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="disconnect-notice" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap disconnect-notice">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<h5>Account disconnected!</h5>
-<p class="content">{If you want to enable auto sharing again, please:}</p>
-<div class="overlay-btn">
-<p class="btns btn-ok"><span><a href="#">OK</a></span></p>
-</div>
-</div>
-</div>
-</div>
-
-<div id="confirm-disconnect" class="lightbox-content overlay-l setup-notice">
-<div class="overlay-container">
-<div class="overlay-wrap disconnect">
-<a href="#" class="btn-close">Close</a>
-<h4 class="cms-setup">CMS Setup</h4>
-<p class="content">Disconnecting account will also disable auto sharing for every channel. Are you sure you want to disconnect?</p>
-<div class="overlay-btn">
-<p class="btns btn-no"><span><a href="#">No</a></span></p>
-<p class="btns btn-disconnect"><span><a href="#">Disconnect</a></span></p>
 </div>
 </div>
 </div>
