--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -5,32 +5,31 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=1026" />
-<link rel="stylesheet" href="stylesheets/epcurate.css?v=1026" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1026"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1026"></script>
-<script src="javascripts/jquery.ellipsis.js?v=1026"></script>
-<script src="javascripts/jquery.blockUI.js?v=1026"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=1026"></script>
-<script src="javascripts/jquery.uniform.min.js?v=1026"></script>
-<script src="javascripts/jquery.cycle.all.js?v=1026"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1026"></script>
-<script src="javascripts/jquery.cookie.js?v=1026"></script>
-<script src="javascripts/jquery.ui.datepicker-en.js?v=1026"></script>
-<script src="javascripts/jquery.ui.datepicker-zh.js?v=1026"></script>
-<script src="javascripts/json2.js?v=1026"></script>
-<script src="javascripts/purl.js?v=1026"></script>
-<script src="javascripts/swfupload/swfupload.js?v=1026"></script>
-<script src="javascripts/vertical.slider.js?v=1026"></script>
-<script src="javascripts/config.js?v=1026"></script>
-<script src="javascripts/controller.js?v=1026"></script>
-<script src="javascripts/basic.js?v=1026"></script>
-<script src="javascripts/epcurate.js?v=1026"></script>
+<link rel="stylesheet" href="stylesheets/style.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/jquery.datepick.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/epcurate.css?v=1135" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="javascripts/nn-sdk.js?v=1135"></script>
+<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/jquery.uniform.min.js?v=1135"></script>
+<script src="javascripts/jquery.cycle.all.min.js?v=1135"></script>
+<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/jquery.ui.datepicker-en.js?v=1135"></script>
+<script src="javascripts/jquery.ui.datepicker-zh.js?v=1135"></script>
+<script src="javascripts/json2.min.js?v=1135"></script>
+<script src="javascripts/purl.min.js?v=1135"></script>
+<script src="javascripts/swfupload/swfupload.js?v=1135"></script>
+<script src="javascripts/vertical.slider.min.js?v=1135"></script>
+<script src="javascripts/config.js?v=1135"></script>
+<script src="javascripts/controller.js?v=1135"></script>
+<script src="javascripts/basic.js?v=1135"></script>
+<script src="javascripts/epcurate.js?v=1135"></script>
 <title>9x9.tv - Episode Curation - Publish</title>
 </head>
 <body>
@@ -195,7 +194,7 @@
 </script>
 
 <script id="img-list-tmpl-item" type="text/x-jquery-tmpl">
-<li><img src="${imageUrl}" alt="${name}" /></li>
+<li><div class="img"><img src="${imageUrl}" alt="${name}" /></div></li>
 </script>
 
 <!--============================== footer start ==============================-->
